Added save and quit functionality via localstorage

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,6 +15,7 @@
 	<div class="row toprow"></div>
 	<div class="row">
 		<div class="col-lg-4 donot-select">
+			<button type="button" id="quitbutton" class="btn">QUIT AND SAVE</button>
 			<h1>Soul spender</h1>
 			<ul>
 				<li>no upgrades yet</li>
